<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/inputTitleBook"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputKindOfBook"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="50dp"
        android:hint="@string/KindOfBook"
        android:inputType="text"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputTitleOfBook" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputAuthorOfBook"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="50dp"
        android:hint="@string/authorOfBook"
        android:inputType="text"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputKindOfBook" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputISBNOfBook"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="50dp"
        android:hint="@string/isbnOfBook"
        android:inputType="text"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputAuthorOfBook" />

    <TextView
        android:id="@+id/boxTittle2"
        android:layout_width="289dp"
        android:layout_height="40dp"
        android:layout_marginBottom="520dp"
        android:elevation="4dp"
        android:textAllCaps="false"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputISBNOfBook"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_conversion_absoluteHeight="40dp"
        tools:layout_conversion_absoluteWidth="300dp"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/alertText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/changeScreen"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/boxTittle2"
        app:layout_constraintStart_toStartOf="@id/boxTittle2"
        app:layout_constraintTop_toTopOf="@id/boxTittle2"
        tools:layout_conversion_absoluteHeight="34dp"
        tools:layout_conversion_absoluteWidth="231dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputTitleOfBook"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="50dp"
        android:hint="@string/titleOfBook"
        android:inputType="text"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boxTittle2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="136dp"
        android:layout_height="44dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/searchButton"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>